# attn

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  package-lock.json  package.json  skills-lock.json
.agents/skills/rampa-colors/: SKILL.md
.agents/skills/rampa-colors/scripts/: generate.sh
.beads/: issues.jsonl  metadata.json
.claude/skills/: rampa-colors
.claude/skills/implement-bd/: SKILL.md
.claude/skills/plan-to-beads/: SKILL.md
.github/: RELEASE_SETUP.md
.github/workflows/: ci.yml  macos-desktop-test.yml  npm-publish.yml  release.yml  test-signing.yml
homebrew/: attn-cask.rb.template  attn.rb.template  update-tap.sh
icons/: README.md  attn.icns
mockups/: font-explore.html  paper-theme.html
planning/: architecture.md  differentiation.md  goals.md  perceived-latency-goal.md  scope.md  v2-plan.md
scripts/: build.sh  generate-marketing-screenshots.sh  generate-placeholder-icon.sh  macos-build-bundle.sh  macos-create-dmg.sh  macos-notarize-dmg.sh  macos-sign-app.sh  postinstall.mjs  test-e2e.sh
site/: package-lock.json  package.json  svelte.config.js
site/src/: app.css  app.html
site/src/lib/: Architecture.svelte  CodeBlock.svelte  FeatureCard.svelte  FeatureSection.svelte  Footer.svelte  Hero.svelte  KeyboardShortcuts.svelte  Nav.svelte  theme.svelte.ts
site/src/routes/: +layout.svelte  +page.svelte
src/: cli_alias.rs  daemon.rs  files.rs  ipc.rs  main.rs  markdown.rs  projects.rs  screenshot.rs  watcher.rs
src/platform/: macos.rs  mod.rs
tests/fixtures/: basic.md  marketing.md  typography.md
tests/fixtures/nested/: child.md
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: generate-vscode-icon-map.mjs
web/src/: App.svelte  app.css  main.ts
web/src/lib/: CodeBlockScrollArea.svelte  CommandPalette.svelte  DirectoryOverview.svelte  Editor.svelte  FileTree.svelte  ImageViewer.svelte  KeyboardShortcutsDialog.svelte  MediaPlayer.svelte  PathBreadcrumb.svelte  Sidebar.svelte  TabBar.svelte  Viewer.svelte  font-scale.ts  icon-pack.ts  icon-resolver.ts  ipc.ts  keyboard.ts  markdown-layer.ts  mock-ipc.ts  schema.ts  tabs.ts  theme.ts  types.ts
web/src/lib/prosemirror/: code-highlight.ts  (+4 more)
web/styles/: base.css  prosemirror.css  syntax.css
(+17 files in other folders)
