[package]
name = "attn"
version = "0.1.0"
edition = "2024"
description = "A beautiful markdown viewer that launches from the CLI"
license = "MIT"

[[bin]]
name = "attn"
path = "src/main.rs"

[dependencies]
wry = "0.49"
tao = "0.32"
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.36", default-features = false, features = ["syntect"] }
syntect = "5"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
base64 = "0.22"
open = "5"
