[package]
name = "attn"
version = "0.1.12"
edition = "2024"
description = "A beautiful markdown viewer that launches from the CLI"
license = "MIT"
repository = "https://github.com/lightsofapollo/attn"
homepage = "https://github.com/lightsofapollo/attn"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/build.rs",
    "/README.md",
    "/LICENSE",
    "/src/**",
    "/icons/attn.icns",
    "/icons/attn.png",
    "/web/**",
    "!/web/dist/**",
    "!/web/node_modules/**",
    "!/web/src/lib/icons/vscode-generated/**",
    "!/web/src/lib/vscode-icon-map.generated.ts",
]

[package.metadata.bundle]
name = "attn"
identifier = "dev.jameslal.attn"
icon = ["icons/attn.icns", "icons/attn.png"]
category = "DeveloperTool"
short_description = "A beautiful markdown viewer that launches from the CLI"

[[bin]]
name = "attn"
path = "src/main.rs"

[dependencies]
wry = "0.49"
tao = "0.32"
clap = { version = "4", features = ["derive"] }
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
anyhow = "1"
dirs = "6"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
percent-encoding = "2.3.2"
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
devtools = ["wry/devtools"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSImage", "NSImageRep", "NSBitmapImageRep", "NSMenu", "NSMenuItem", "NSStatusBar", "NSStatusItem", "objc2-core-foundation"] }
objc2-foundation = "0.3"
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKSnapshotConfiguration", "block2"] }
block2 = "0.6"
